fix style issue where checkmarks next to services were too small so made min width to fit content so it would match the content in services component

--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -49,6 +49,7 @@
 .service_list-icon {
     color: var(--color-primary);
     margin-top: 2px;
+    min-width: fit-content;
 }
 
 .service_list p {
